--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         </video>
       </div>
       <div class="header__text-box">
-        <h1 class="heading-primary">Titulo</h1>
+        <h1 class="heading-primary">Give your code a home int the world</h1>
+        <h2 class="heading-secondary">Ready player two.</h2>
         <p class="paragraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit autem
           labore doloribus officia eaque nam cupiditate repellendus quae culpa,
@@ -46,7 +47,7 @@
         <a href="#" class="btn">saiba mais &darr;</a>
       </div>
     </header>
-    <main >
+    <main class="main" >
       hello world
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga libero, aut sit eaque odio quasi necessitatibus adipisci incidunt minima voluptas suscipit vitae sunt blanditiis magnam nulla repellendus sequi assumenda iusto.
     </main>
